--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = libs/glfw
 	url = git@github.com:glfw/glfw.git
 	branch = master
+[submodule "libs/glm"]
+	path = libs/glm
+	url = git@github.com:g-truc/glm.git
